# myapps-client-store

./: .gitignore  .gitmodules  CMakeLists.txt  CTestConfig.cmake  README.md  configure
certs/: ola-ca-cert.pem
cmake/: build-cereal.cmake  build-config.cmake  build-libzip.cmake  build-replxx.cmake  build-snappy.cmake  check.config.cmake  config.hpp.in  find-boost.cmake  find-fuse.cmake  find-openssl.cmake  find-solidframe.cmake  source-format.cmake
cpack/: readme.txt
cpack/deb/: postinst  postrm  prerm
cpack/systemd/: memgrow.service
cpack/wix/: service.patch  template.in
myapps/client/store/: CMakeLists.txt  about_form.ui  account_form.ui  configure_form.ui  item_form.ui  launcher_main.cpp  ola_upload.in  store.build.yml  store_engine.cpp  store_engine.hpp  store_form.ui  store_main.cpp  store_main.qrc  store_main.rc  store_main_window.cpp  store_main_window.hpp  upload.in
ola/: CMakeLists.txt
ola/client/: CMakeLists.txt
ola/client/store/: CMakeLists.txt  about_form.ui  configure_form.ui  env_main.cpp  framelesswindow.qrc  framelesswindow.ui  item_form.ui  launcher_main.cpp  list_form.ui  ola_store.build  ola_store.build.yml  ola_store.media  ola_store.media.yml  ola_upload.in  store_engine.cpp  store_engine.hpp  store_form.ui  store_form_old.ui  store_main.aps  store_main.cpp  store_main.qrc  store_main.rc  store_main_window.cpp  store_main_window.hpp
prerequisites/: build
